// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EQ filter string > EQ filter snapshot — single band 1 kHz cut 1`] = `
"[0:a] aresample=48000, aformat=sample_fmts=fltp:channel_layouts=mono:sample_rates=48000 [c0];
[c0] atrim=start_sample=0:end_sample=48000, asetpts=PTS-STARTPTS [c1];
[c1] equalizer=f=1000:width_type=o:width=1:g=-3 [c2];
[c2] anull [voicelane];"
`;

exports[`compressor filter string > compress effect snapshot 1`] = `
"[0:a] aresample=48000, aformat=sample_fmts=fltp:channel_layouts=mono:sample_rates=48000 [c0];
[c0] atrim=start_sample=0:end_sample=48000, asetpts=PTS-STARTPTS [c1];
[c1] acompressor=threshold=0.1:ratio=4:attack=5:release=100:knee=2:makeup=1 [c2];
[c2] anull [voicelane];"
`;

exports[`effects ordering — after gain and pan > stereo mode: effects after pan — snapshot 1`] = `
"[0:a] aresample=48000, aformat=sample_fmts=fltp:channel_layouts=mono:sample_rates=48000 [c0];
[c0] atrim=start_sample=0:end_sample=48000, asetpts=PTS-STARTPTS [c1];
[c1] pan=stereo|c0=0.707107*c0|c1=0.707107*c0 [c2];
[c2] equalizer=f=1000:width_type=o:width=1:g=-3 [c3];
[c3] anull [voicelane];"
`;
